--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "prosemirror-model": "^1.13.3",
     "prosemirror-schema-list": "^1.1.2",
     "prosemirror-state": "^1.3.4",
-    "prosemirror-tables": "^1.1.1",
+    "prosemirror-tables": "^0.9.1",
     "prosemirror-transform": "1.2.5",
     "prosemirror-utils": "^0.9.6",
     "prosemirror-view": "1.18.1",
@@ -99,6 +99,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.0.8",
+    "html-webpack-plugin": "^5.6.3",
     "jest": "^26.6.3",
     "prettier": "^1.19.1",
     "react": "^17.0.0",
@@ -107,7 +108,9 @@
     "styled-components": "^5.2.1",
     "ts-loader": "^6.2.1",
     "tsc-watch": "^4.2.9",
-    "typescript": "4.1.6"
+    "typescript": "4.1.6",
+    "webpack": "^5.96.1",
+    "webpack-cli": "^4.10.0"
   },
   "resolutions": {
     "markdown-it": "^12.2.0",
